# nefarious

./: .cvsignore  ChangeLog  ChangeLog.nefarious  Doxyfile  INSTALL  Makefile.in  README  README.Cygwin  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
doc/: Authors  CIDR.txt  Makefile.in  challenge.txt  example.conf  example2.conf  ircd.conf.sample  ircd.motd  ircd.quotes  iso-time.html  p10.html  p10.txt  readme.cvs  readme.features  readme.gline  readme.login-on-connect  readme.osx  readme.shun  readme.webircextra  snomask.html
doc/history/: 2.4.notes  ChangeLog.07  ChangeLog.10  Manual  README-2.6  history.pre24
help/: Makefile.in
help/opers/: admin  away  challenge  channelmodes  check  clearmode  close  cnotice  commands  die  (+67 more)
include/: IPcheck.h  channel.h  check.h  class.h  client.h  cloak.h  crule.h  dbuf.h  fda.h  fileio.h  flagset.h  gline.h  handlers.h  hash.h  hosthiding.h  iauth.h  ircd.h  ircd_alloc.h  ircd_chattr.h  ircd_crypt.h  ircd_crypt_native.h  ircd_crypt_plain.h  ircd_crypt_smd5.h  ircd_defs.h  ircd_events.h  ircd_features.h  ircd_handler.h  ircd_log.h  ircd_md5.h  ircd_osdep.h  ircd_relay.h  ircd_reply.h  ircd_signal.h  ircd_snprintf.h  ircd_string.h  ircd_struct.h  jupe.h  list.h  listener.h  map.h  (+39 more)
ircd/: IPcheck.c  Makefile.in  channel.c  chkconf.c  class.c  client.c  cloak.c  convert-conf.c  crule.c  dbuf.c  engine_devpoll.c  engine_epoll.c  engine_kqueue.c  engine_poll.c  engine_select.c  fda.c  fda_t.c  fileio.c  gline.c  hash.c  hosthiding.c  iauth.c  ircd.c  ircd_alloc.c  ircd_crypt.c  ircd_crypt_native.c  ircd_crypt_plain.c  ircd_crypt_smd5.c  ircd_events.c  ircd_features.c  ircd_lexer.l  ircd_log.c  ircd_md5.c  ircd_parser.y  ircd_relay.c  ircd_reply.c  ircd_signal.c  ircd_snprintf.c  ircd_string.c  ircd_xopen.c  (+153 more)
linesync2/: linesync.sh
patches/: README  banexempts.srvx2.diff  halfops.srvx2.diff  loc.srvx2.diff
tools/: Makefile.crypt  README  autodoc.py  convert_slines.sh  crypter  genircds.pl  hashtoy  mkchroot  mkkeypair  mkpasswd.pl  pcre_install.sh  ringlog.c  ringlog.pl  sums  transition  tre_install.sh  untabify  wrapper.c
tools/zBounce/: .gitignore  Bounce.cpp  Bounce.h  ChangeLog  Connection.cpp  Connection.h  LICENSE  Listener.cpp  Listener.h  Makefile.am  Makefile.in  README  Socket.cpp  Socket.h  StringTokenizer.cc  StringTokenizer.cpp  StringTokenizer.h  config.h  configure  configure.ac  configure.in  defs.h.in  main.cpp  main.h  zbounce.conf
tools/zBounce/docs/: zbounce_cmdline.readme  zbounce_ircd.example
(+29 files in other folders)
